# barter-desk

./: .gitignore  Readme.md  db.sqlite3  pyproject.toml
ads/: admin.py  api_urls.py  api_views.py  auth_views.py  forms.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/tests/: conftest.py  test_ads_api.py  test_ads_web.py  test_exchange_api.py  test_exchange_web.py  test_filter_ad.py
config/: settings.py  urls.py
static/css/: custom.css
static/js/: custom.js
templates/: base.html
templates/ads/: ad_detail.html  ad_form.html  ad_list.html  exchange_proposal_form.html  exchange_proposals.html
templates/registration/: login.html  register.html
templates/users/: profile.html
